[tool.poetry]
name = "blackhubgetserver"
version = "0.1.0"
description = ""
authors = ["Andrew Martyanov <666ytra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
